# 1p

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  tip.yml
onep/: __main__.py  colors.py  fields.py  onep.py  util.py
onep/commands/: __init__.py  delete.py  document.py  edit.py  search.py  share.py  show.py  signin.py  vaults.py
tests/: common.py  test_entries.py  test_error.py  test_fields.py  test_help.py  test_run.py  test_session.py  test_share.py  test_vaults.py
